--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,5 +1,7 @@
 name: Industrialisation continue sur le serveur Alwaysdata
+
 on: push
+
 jobs:
   Connexion:
     runs-on: ubuntu-latest
@@ -12,6 +14,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           script: |
             cd $HOME/www/
+
   Copy:
     needs: Connexion
     runs-on: ubuntu-latest
@@ -26,14 +29,14 @@ jobs:
             last_directory=$(basename ${{ runner.workspace }})
             cd $HOME/www/
             git clone https://github.com/${{ github.repository }}.git
-            # Vérifier si le répertoire de destination existe
-            if [ "$(ls -A ./flask)" ]; then
+            if [ -d "./flask" ]; then
               rsync -r ./$last_directory/ ./flask
               rm -rf ./$last_directory
             else
-              echo "Le répertoire flask de destination sur votre serveur n'existe pas"
+              echo "Le répertoire flask n'existe pas"
               exit 1
             fi
+
   Restart:
     needs: Copy
     runs-on: ubuntu-latest
@@ -41,29 +44,15 @@ jobs:
       - name: Restart Alwaysdata site
         run: |
           response_code=$(curl -s -o /dev/null -w "%{http_code}" -X POST --basic --user "${{ secrets.ALWAYSDATA_TOKEN }}:" https://api.alwaysdata.com/v1/site/${{ secrets.ALWAYSDATA_SITE_ID }}/restart/)
-          # Vérifier le code de réponse HTTP
           if [ "$response_code" -eq 204 ]; then
-            echo "Relance de votre site réussi"
+            echo "✅ Relance du site réussie"
           elif [ "$response_code" -eq 404 ]; then
-            echo "Vous n'avez pas renseigner correctement votre secret ALWAYSDATA_SITE_ID"
-            exit 1  # Quitter avec un code d'erreur
+            echo "❌ ALWAYSDATA_SITE_ID incorrect"
+            exit 1
           elif [ "$response_code" -eq 401 ]; then
-            echo "Vous n'avez pas renseigner correctement votre secret ALWAYSDATA_TOKEN"
-          exit 1  # Quitter avec un code d'erreur
+            echo "❌ ALWAYSDATA_TOKEN incorrect"
+            exit 1
           else
-            echo "Échec du redémarrage avec le code de réponse : $response_code"
-            exit 1  # Quitter avec un code d'erreur
+            echo "❌ Échec du redémarrage : code $response_code"
+            exit 1
           fi
-
-  jobs:
-    Connexion:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Connexion SSH avec le serveur
-          uses: appleboy/ssh-action@master
-          with:
-            host: "ssh-${{ secrets.USERNAME }}.alwaysdata.net"
-            username: ${{ secrets.USERNAME }}
-            key: ${{ secrets.SSH_KEY }}
-            script: |
-              cd $HOME/www/
